--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.jianastrero.chronicle"
+        applicationId 'com.jianastrero.chroniclesample'
         minSdkVersion 14
         targetSdkVersion 28
         versionCode 1
