--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:dist="http://schemas.android.com/apk/distribution"
-          package="com.jianastrero.chronicle">
+          package="com.jianastrero.chroniclesample">
 
     <dist:module dist:instant="true"/>
 
@@ -12,7 +12,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
-        <activity android:name=".sample.MainActivity">
+        <activity android:name="com.jianastrero.chronicle.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
